--- a/src/components/ActionButtons/index.scss
+++ b/src/components/ActionButtons/index.scss
@@ -1,18 +1,11 @@
 ..action-buttons {
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	height: 60px;
-	box-sizing: border-box;
-	padding: 10px 20px;
-	border-top: 1px solid #ddd;
+	var .abs.l.r.b.h60.box.p10-20.bot-ddd;
 
 	..button {
-		float: right;
+		var .fr;
 
 		&..cancel-button {
-			float: left;
+			var .fl;
 		}
 	}
 } 
