--- a/src/ui/FormField/index.scss
+++ b/src/ui/FormField/index.scss
@@ -1,5 +1,7 @@
-..form-field {
-	..form-field-caption {
+.with.auto.addedPrefix.form-field;
+
+.self {
+	.caption {
 		padding-bottom: 6px;
 		color: #555;
 		font-size: 13px;
