--- a/src/ui/Icon/index.scss
+++ b/src/ui/Icon/index.scss
@@ -1,10 +1,12 @@
+.with.auto.addedPrefix.icon;
+
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/materialicons/v31/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
 }
-..icon {
+.self {
 	font-family: 'Material Icons';
 	font-weight: normal;
 	font-style: normal;
@@ -19,7 +21,7 @@
 	-webkit-font-feature-settings: 'liga';
 	-webkit-font-smoothing: antialiased;
 
-	&..button-icon {
+	&.button {
 		cursor: pointer;
 		opacity: 0.7;
 		&:hover {
@@ -27,11 +29,11 @@
 		}
 	}
 
-	&..edit-icon {
+	&.edit {
 		float: left;
 		margin-top: -1px;
 	}
-	&..activate-icon {
+	&.activate {
 		float: right;
 	}
 }
