--- a/src/ui/Loader/index.scss
+++ b/src/ui/Loader/index.scss
@@ -1,4 +1,6 @@
-..loader {
+.with.auto.addedPrefix.loader;
+
+.self {
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -18,7 +20,7 @@
 		opacity: 0.8;
 	}
 	
-	..container {
+	.container {
 		z-index: 2;
 		position: absolute;
 		left: 50%;
@@ -26,9 +28,9 @@
 		margin-left: -45px;
 		margin-top: -45px;
 	}		
-	..whirlpool,
-	..whirlpool::before,
-	..whirlpool::after {
+	.whirlpool,
+	.whirlpool::before,
+	.whirlpool::after {
 		position: absolute;
 		top: 50%;
 		left: 50%;
@@ -40,7 +42,7 @@
 			-webkit-border-radius: 1499px;
 			-moz-border-radius: 1499px;
 	}
-	..whirlpool {
+	.whirlpool {
 		height: 75px;
 		width: 75px;
 		animation: cssload-rotate 1150ms linear infinite;
@@ -49,7 +51,7 @@
 			-webkit-animation: cssload-rotate 1150ms linear infinite;
 			-moz-animation: cssload-rotate 1150ms linear infinite;
 	}
-	..whirlpool::before {
+	.whirlpool::before {
 		content: "";
 		margin: -35px 0 0 -35px;
 		height: 66px;
@@ -60,7 +62,7 @@
 			-webkit-animation: cssload-rotate 1150ms linear infinite;
 			-moz-animation: cssload-rotate 1150ms linear infinite;
 	}
-	..whirlpool::after {
+	.whirlpool::after {
 		content: "";
 		margin: -44px 0 0 -44px;
 		height: 84px;
