--- a/src/components/ActionButtons/index.scss
+++ b/src/components/ActionButtons/index.scss
@@ -1,10 +1,12 @@
-..action-buttons {
+.with.addedPrefix.action-buttons;
+
+.self {
 	var .abs.l.r.b.h60.box.p10-20.bot-ddd;
 
 	..button {
 		var .fr;
 
-		&..cancel-button {
+		&..cancel-button {  
 			var .fl;
 		}
 	}
