--- a/src/ui/Tabs/index.scss
+++ b/src/ui/Tabs/index.scss
@@ -1,7 +1,7 @@
-.with.auto.prefix;
+.with.addedPrefix.tabs;
 
-.tabs {
-	.tabs-menu {
+.self {
+	.menu {
 		font-size: 0;
 		line-height: 0;
 		letter-spacing: -1px;
