--- a/src/ui/Table/index.scss
+++ b/src/ui/Table/index.scss
@@ -1,4 +1,6 @@
-..table {
+.with.addedPrefix.table;
+
+.self {
 	width: 100% !important;
 	border-spacing: 0 !important;
 	border-collapse: collapse !important;
