--- a/src/components/CreateTaskButton/index.scss
+++ b/src/components/CreateTaskButton/index.scss
@@ -1,12 +1,10 @@
-.with.auto.prefix;
-
-.create-task-button {
+.self {
 	var .fix.z9990.b11.l55.pntr.c-444.bc-fff.p3.br3;
 
 	&:hover {
 		var .c-111;
 	}
-	.icon {
+	..icon {
 		var .fs26.lh26.fl;
 	}
 }
