--- a/src/components/AreaSelection/index.scss
+++ b/src/components/AreaSelection/index.scss
@@ -2,10 +2,10 @@
 	var .abs.l50p.w150.h120.t.z10;
 
 	&:before {
-		var .cnt.abs.w.h.shad-in-29476f-40.bo-002d65-2-dashed.o4.br3.z1;
+		var .cnt.abs.rubb.shad-in-29476f-40.bo-002d65-2-dashed.o4.br3.z1;
 	}
 	..task-mark {
-		var .l-45!.t-45!.ml!.mt!;
+		var .l-45!.t-58!.ml!.mt!.z4!;
 
 		&..fixed {
 			var .abs!;
