visual elements mask

--- a/src/components/VisualElements/index.scss
+++ b/src/components/VisualElements/index.scss
@@ -1,9 +1,7 @@
-..visual-elements {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	height: 0;
-	z-index: 9995;
-	user-select: none;
+.self {
+	var .abs.t.l.r.z9995.nosel;
+
+	.mask {
+		var .fix.z1.rubb;
+	}
 }
