--- a/src/components/CreateTaskButton/index.scss
+++ b/src/components/CreateTaskButton/index.scss
@@ -1,5 +1,5 @@
 .self {
-	var .fix.z9990.b11.l55.pntr.c-444.bc-fff.p3.br3;
+	var .fix.z9990.b11.l55.pntr.c-eee.bc-555.p3.br3;
 
 	&:hover {
 		var .c-111;
