--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -10,4 +10,29 @@
 	textarea {
 		var .rel.wh.ovh.p12-15.z2.trans.bo;
 	}
+	&..pale {
+		textarea {
+			var .c-8195ad;
+		}
+	}
+	&..red {
+		textarea {
+			var .c-f11e3d;
+		}
+	}
+	&..green {
+		textarea {
+			var .c-00c70d;
+		}
+	}
+	&..blue {
+		textarea {
+			var .c-0473ce;
+		}
+	}
+	&..orange {
+		textarea {
+			var .c-ff8300;
+		}
+	}
 }
