--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -3,7 +3,7 @@
 
 	&..active {
 		&:before {
-			var .cnt.abs.rubb.shad-in-e1e1e1-40.bo-c1c1c1-2-dashed.o4.br3.z1;
+			var .cnt.abs.rubb.shad-in-e1e1e1-40.bo-a1a1a1-2-dashed.o4.br3.z1;
 		}
 	}
 	
