--- a/src/components/Drawing/index.scss
+++ b/src/components/Drawing/index.scss
@@ -1,3 +1,6 @@
 .self {
 	var .abs.l50p.t.z10;
+	&:before {
+		var .cnt.abs.rubb.shad-in-e1e1e1-40.bo-ceb900-2-dashed.o4.br3.z1.shad-ceb900-50;
+	}
 }
