mask, visual element actions

--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -90,3 +90,22 @@ body {
 ..pt10 {
 	var .pt10;
 }
+
+..black {
+	var .bc-222;
+}
+..pale {
+	var .bc-8195ad;
+}
+..red {
+	var .bc-f11e3d;
+}
+..green {
+	var .bc-02d00f;
+}
+..blue {
+	var .bc-0473ce;
+}
+..orange {
+	var .bc-ff8300;
+}
