--- a/src/components/Drawing/index.scss
+++ b/src/components/Drawing/index.scss
@@ -3,4 +3,16 @@
 	&:before {
 		var .cnt.abs.rubb.shad-in-e1e1e1-40.bo-ceb900-2-dashed.o4.br3.z1.shad-ceb900-50;
 	}
+	&..action-draw {
+		var .cur-none!;
+	}
+	.canvas-area {
+		var .abs.rubb.ovh;
+	}
+	.canvas {
+		var .abs.rubb.z2;
+	}
+	.cursor {
+		var .abs.br50p;
+	}
 }
