--- a/src/components/QuickTask/index.scss
+++ b/src/components/QuickTask/index.scss
@@ -83,6 +83,11 @@
 		padding: 5px 7px;
 		text-align: right;
 		z-index: 2;
+
+		..mask-mode-button {
+			display: inline-block;
+			vertical-align: top;
+		}
 	}
 
 	&.collapsed {
