--- a/src/components/VisualElementPanel/index.scss
+++ b/src/components/VisualElementPanel/index.scss
@@ -1,6 +1,5 @@
 .self {
-	var .fix.t50p.br0-5-5-0.c-fff.z9996.nosel.bc-555.p10-6;
-	transform: translate(0, -50%);
+	var .fix.t50p.mt-200.br0-5-5-0.c-fff.z9996.nosel.bc-555.p10-6;
 
 	..icon {
 		&..element-type {
