--- a/src/components/Drawing/index.scss
+++ b/src/components/Drawing/index.scss
@@ -1,5 +1,5 @@
 .self {
-	var .abs.l50p.t.z10;
+	var .abs.l50p.t.z10.trans!;
 	&:before {
 		var .cnt.abs.rubb.shad-in-e1e1e1-40.bo-ceb900-2-dashed.o4.br3.z1.shad-ceb900-50;
 	}
