--- a/src/ui/FormField/index.scss
+++ b/src/ui/FormField/index.scss
@@ -1,4 +1,5 @@
 .self {
+	var .rel;
 	.caption {
 		padding-bottom: 6px;
 		color: #555;
@@ -10,5 +11,8 @@
 	textarea {
 		box-sizing: border-box;
 		width: 100%;
+	}
+	..tooltip {
+		var .abs.r5.t30;
 	}
 }
