--- a/src/ui/Tooltip/index.scss
+++ b/src/ui/Tooltip/index.scss
@@ -5,4 +5,19 @@
 			var .c-555;
 		}
 	}
+	.caption1 {
+		var .fs20.pb10.bold.c-000;
+	}
+	.caption2 {
+		var .fs18.pb10.c-000;
+	}
+	.line {
+		var .pb3;
+	}
+	.space {
+		var .h16;
+	}
+	.code {
+		var .m6-0-15-0.p10.bc-e1e1e1.bo-ccc.br3.lh20.c-000;
+	}
 }
