--- a/src/ui/Dialog/index.scss
+++ b/src/ui/Dialog/index.scss
@@ -9,7 +9,7 @@
 		& > .self {
 			var .w1000.h;
 			& > .content {
-				var .abs.l.r.t50.b.p15-0;
+				var .abs.l.r.t51.b.p15-0.ova;
 			}
 			& > .buttons {
 				var .abs.l.r.b;
