--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -46,7 +46,7 @@ body {
 		var .box.bc-fff.p8-12.bo-aaa.br2.ff-Roboto.tra-boc-3.fs14;
 		
 		&:focus {
-			var .ol.shad.boc-000;
+			var .ol.shad.boc-222!;
 		}
 	}
 
