--- a/src/components/ProjectForm/index.scss
+++ b/src/components/ProjectForm/index.scss
@@ -4,4 +4,14 @@
 	textarea {
 		var .h150;
 	}
+	.getparams {
+		textarea {
+			var .boc-ddd;
+		}
+	}
+	.settings {
+		..form-field-content {
+			var .p10.bo-aaa;
+		}
+	}
 }
