--- a/src/components/Tasks/index.scss
+++ b/src/components/Tasks/index.scss
@@ -1,3 +1,13 @@
-..tasks {
-	
+.self {
+	.content {
+		var .abs.t100.l.r.b15.ova.p0-20;
+	}
+	.main-tabs {
+		..tabs-menu {
+			var .mb5!;
+		}
+	}
+	..tabs-tab {
+		var .fs13!.p7-10!;
+	}
 }
