--- a/src/ui/Dialog/index.scss
+++ b/src/ui/Dialog/index.scss
@@ -22,6 +22,13 @@
 			}
 		}
 	}
+	&.no-overflow {
+		& > .self {
+			& > .content {
+				overflow: visible !important;
+			}
+		}
+	}
 	&.small {
 		& > .self {
 			var .w540;
