--- a/src/components/Tasks/index.scss
+++ b/src/components/Tasks/index.scss
@@ -28,4 +28,14 @@
 	.right-menu {
 		var .abs.l100p.w44.t14;
 	}
+	.no-tasks {
+		var .abs.l20.r20.t.b.bo-ccc.bc-f4f4f4;
+
+		..icon {
+			var .abs.fs200.l.r.t50p.mt-200.cen.c-aaa;
+		}
+	}
+	.no-tasks-text {
+		var .abs.t50p.cen.l.r.fs18.c-777.mt10;
+	}
 }
