--- a/src/components/Task/index.scss
+++ b/src/components/Task/index.scss
@@ -4,7 +4,7 @@
 	..avatar {
 		var .abs.l96.t5.wh46;
 	}
-	..task-actions {
+	..task-actions-button {
 		var .abs.r.t.b.w50.o4;
 		..icon {
 			var .abs.t50p.mt-15.l50p.ml-15;
