--- a/src/components/TaskActions/index.scss
+++ b/src/components/TaskActions/index.scss
@@ -6,7 +6,7 @@
 	}
 
 	.content {
-		var .abs.z2.bc-fff.p20.br5;
+		var .abs.z2.bc-fff.p20.br5.mnh200.mnw200.box.flex.flcen;
 	}
 	..button {
 		var .bl.w160.mb5.fs15.lh40;
