--- a/src/components/TaskInfo/index.scss
+++ b/src/components/TaskInfo/index.scss
@@ -8,13 +8,19 @@
 		var .fs19;
 	}
 	.participants {
-		var .abs.w90.r20.t;
+		var .abs.w110.r20.t.p10.bc-e1e1e1.box;
 
 		.caption {
 			var .pb6.fs13;
 		}
 		..avatar {
 			var .mb10;
+		}
+	}
+	.participant {
+		var .pb12.mb12.bob-555-2;
+		&:last-child {
+			border-bottom: 0;
 		}
 	}
 	.link {
