--- a/src/ui/Tabs/index.scss
+++ b/src/ui/Tabs/index.scss
@@ -38,4 +38,12 @@
 			color: #999;
 		}
 	}
+	&.absolute {
+		.menu {
+			var .pl20;
+		}
+		.content {
+			var .abs.t60.l.r.b55.ova.box.p5-20;
+		}
+	}
 }
